--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <header class="app-header">
       <img src="img/logo_rota.png" width="300">
     <br>
-    <span class="version">v1.4.1</span>
+    <span class="version">v1.4.2</span>
   </header>
 
   <!-- ORIGEM -->
@@ -252,12 +252,9 @@
       <button class="btn ghost" onclick="salvarClientes()">💾 Salvar endereços</button>
       <button class="btn success" onclick="calcularRota()">🚀 Calcular rota</button>
     </div>
-  </section>
-  
-  
-  <!-- CLIENTES SALVOS -->
-<section class="card">
-  <h3>👥 Clientes salvos</h3>
+    <br>
+    <section class="card">
+  <h3>👥 Excluir endereços e Locais salvos</h3>
 
   <select id="clientesSelect">
     <option value="">Selecione um cliente</option>
@@ -267,6 +264,12 @@
     🗑️ Excluir cliente
   </button>
 </section>
+    
+  </section>
+  
+  
+  <!-- CLIENTES SALVOS -->
+
   
   
 
