--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <header class="app-header">
       <img src="img/logo_rota.png" width="300">
     <br>
-    <span class="version">v1.4.2</span>
+    <span class="version">v1.4.3</span>
   </header>
 
   <!-- ORIGEM -->
@@ -242,7 +242,7 @@
     <h3>Paradas</h3>
 
     <label>Quantas paradas?</label>
-    <input type="number" id="qtd" min="1" max="10" value="Digite o número de paradas">
+    <input type="number" id="qtd" min="1" max="10" placeholder="Digite o número de paradas">
 
     <button class="btn primary" onclick="gerarCampos()">➕ Gerar destinos</button>
 
