--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
        DESTINOS
     ========================= */
     .destino {
-      background: #bbc8ff;
+      background: #3173a3;
       padding: 12px;
       border-radius: 10px;
       margin-bottom: 10px;
