--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <header class="app-header">
       <img src="img/logo_rota.png" width="300">
     <br>
-    <span class="version">v1.4.3</span>
+    <span class="version">v1.4.4</span>
   </header>
 
   <!-- ORIGEM -->
@@ -254,14 +254,14 @@
     </div>
     <br>
     <section class="card">
-  <h3>👥 Excluir endereços e Locais salvos</h3>
+  <h3>❌ Excluir endereços e Locais salvos</h3>
 
   <select id="clientesSelect">
-    <option value="">Selecione um cliente</option>
+    <option value="">Selecione um Endereço/Local para excluir</option>
   </select>
 
   <button class="btn danger" onclick="excluirClienteSelecionado()">
-    🗑️ Excluir cliente
+    🗑️ Excluir Endereços/Locais
   </button>
 </section>
     
