--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     </div>
     <br>
     <section class="card">
-  <h3>❌ Excluir endereços e Locais salvos</h3>
+  <h3>❌ Excluir</h3>
 
   <select id="clientesSelect">
     <option value="">Selecione um Endereço/Local para excluir</option>
