--- a/index.html
+++ b/index.html
@@ -254,14 +254,14 @@
     </div>
     <br>
     <section class="card">
-  <h3>❌ Excluir</h3>
+  <h3>❌ Excluir endereços e Locais salvosr</h3>
 
   <select id="clientesSelect">
     <option value="">Selecione um Endereço/Local para excluir</option>
   </select>
 
   <button class="btn danger" onclick="excluirClienteSelecionado()">
-    🗑️ Excluir Endereços/Locais
+    🗑️ Excluir
   </button>
 </section>
     
