--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     body {
       margin: 0;
-      background: linear-gradient(180deg, #e6e7eb, #64de8c);
+      background: linear-gradient(180deg, #e6e7eb, #f5fff8);
       font-family: 'Segoe UI', system-ui, sans-serif;
       color: var(--text);
     }
