--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     body {
       margin: 0;
-      background: linear-gradient(180deg, #acadad, #838485);
+      background: linear-gradient(180deg, #dcddde, #838485);
       font-family: 'Segoe UI', system-ui, sans-serif;
       color: var(--text);
     }
