--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
 </div>
 
-  <div><h2>Desenvolvido por: Rafael Ferreira</h2></div>
+  <div align="center"><h5>Desenvolvido por: Rafael Ferreira</h5></div>
 
 <script src="script.js"></script>
 </body>
